--- a/styles.css
+++ b/styles.css
@@ -100,16 +100,22 @@ body   {
     background: hsl(0, 0%, 10%);
     color: hsl(0 0% 98%);
     font-family: 'Funnel Sans', sans-serif;
-    
+    margin-top: 60px;
+    text-align: center;
 }
 
 h1 {
     font-family: 'Funnel Sans', sans-serif;
     color: hsl(0, 0%, 98%);
     font-weight: 800;
-    text-align: center;
+    display: inline-block;
     font-size: 44px;
     margin-bottom: 0.2em;
+    background: hsl(0 0% 20%);
+    padding: 0.1em 0.5em;
+    border-radius: 15px;
+    
+    
 }
 
 p{
@@ -117,7 +123,7 @@ p{
     font-style: italic;
     text-align: center;
     margin-top: 0.2em;
-    color: hsl(0 0% 90%)
+    color: hsl(0 0% 85%)
 }
 
 .container {
@@ -144,4 +150,49 @@ button:hover {
   background-color: hsl(202, 100%, 40%); /* dunkler beim Hover */
   box-shadow: 0px 0px 5px 5px hsla(202, 100%, 40%, 0.1); /* Schatten verstärken */
   transform: scale(1.05);
+}
+
+/* Popup-Hintergrund */
+.popup {
+    display: none; /* unsichtbar */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0, 0.4);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Popup-Inhalt */
+.popup-content {
+    background: hsla(345, 50%, 50%, 0.6);
+    padding: 20px 40px;
+    border-radius: 20px;
+    text-align: center;
+    color: black;
+  border: 3px solid hsla(345, 70%, 50%, 1);
+}
+
+.popup-content h1 {
+  display: block;
+  background: none;
+  font-family: 'Funnel Sans', sans-serif;
+  font-weight: 800;
+  margin-top: auto;
+}
+
+.popup-content button {
+  margin-top: auto;
+  background-color: hsla(345, 70%, 50%, 1);
+  box-shadow: 0px 0px 5px 5px hsla(345, 70%, 50%, 0.1);
+}
+
+.popup-content p {
+  margin-top: auto;
+}
+
+.popup-content h1 {
+  margin-bottom: auto;
 }
