--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,24 @@
 }
 
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: hsl(0 0% 10%); /* oder deine Hintergrundfarbe */
+}
+
+@supports (padding: max(0px)) {
+  body {
+    padding-top: env(safe-area-inset-top);
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+    padding-bottom: env(safe-area-inset-bottom);
+  }
+}
+
+
+
 body   {
     background: hsl(0, 0%, 10%);
     color: hsl(0 0% 98%);
@@ -195,4 +213,8 @@ button:hover {
 
 .popup-content h1 {
   margin-bottom: auto;
+}
+
+head {
+  background-color: aqua;
 }
