--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,10 @@
   src: url('fonts/funnel-sans-v2-latin-800italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+html {
+  background-color: hsl(0 0% 5%);
+}
+
 
 html, body {
   margin: 0;
