--- a/styles.css
+++ b/styles.css
@@ -95,26 +95,7 @@
   src: url('fonts/funnel-sans-v2-latin-800italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-html {
-  background-color: hsl(0 0% 5%);
-}
 
-
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background-color: hsl(0 0% 10%); /* oder deine Hintergrundfarbe */
-}
-
-@supports (padding: max(0px)) {
-  body {
-    padding-top: env(safe-area-inset-top);
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
-    padding-bottom: env(safe-area-inset-bottom);
-  }
-}
 
 
 
@@ -221,4 +202,18 @@ button:hover {
 
 head {
   background-color: aqua;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color: #121212; /* deine Farbe */
+  min-height: 100%;
+}
+
+body {
+  padding-top: env(safe-area-inset-top);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
+  padding-bottom: env(safe-area-inset-bottom);
 }
