--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,8 @@ body   {
     color: hsl(0 0% 98%);
     font-family: 'Funnel Sans', sans-serif;
     text-align: center;
+
+    
 }
 
 h1 {
@@ -117,6 +119,7 @@ h1 {
     padding: 0.1em 0.5em;
     border-radius: 15px;
     margin-top: 1.4em;
+    box-shadow: 0px 0px 5px 5px hsl(0 0% 9%)
     
 }
 
@@ -138,65 +141,20 @@ button{
     font-size: 20px;
     padding: 18px 72px;
     border-radius: 40px;
-    margin-top: 1em;
+    
     font-family: 'Funnel Sans', sans-serif;
     color: hsl(0, 0%, 98%);
     display: inline-block;
     box-shadow: 0px 0px 5px 5px hsla(202, 100%, 50%, 0.1);
     transition: background-color 0.3s ease;
     font-weight: 500;
-    ;
+    
 }
 
 button:hover {
   background-color: hsl(202, 100%, 40%); /* dunkler beim Hover */
   box-shadow: 0px 0px 5px 5px hsla(202, 100%, 40%, 0.1); /* Schatten verstärken */
   transform: scale(1.05);
-}
-
-/* Popup-Hintergrund */
-.popup {
-    display: none; /* unsichtbar */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0, 0.4);
-    justify-content: center;
-    align-items: center;
-}
-
-/* Popup-Inhalt */
-.popup-content {
-    background: hsla(345, 50%, 30%, 1);
-    padding: 20px 40px;
-    border-radius: 20px;
-    text-align: center;
-    color: black;
-  border: 3px solid hsla(345, 70%, 50%, 1);
-}
-
-.popup-content h1 {
-  display: block;
-  background: none;
-  font-family: 'Funnel Sans', sans-serif;
-  font-weight: 800;
-  margin-top: auto;
-}
-
-.popup-content button {
-  margin-top: auto;
-  background-color: hsla(345, 70%, 50%, 1);
-  box-shadow: 0px 0px 5px 5px hsla(345, 70%, 50%, 0.1);
-}
-
-.popup-content p {
-  margin-top: auto;
-}
-
-.popup-content h1 {
-  margin-bottom: auto;
 }
 
 
@@ -210,4 +168,34 @@ html, body {
 
 body {
   padding-top: env(safe-area-inset-top);
+}
+
+
+.addbtncon img {
+  height: 150px;
+   
+  
+}
+
+.addbtncon {
+  text-align: center;
+   display: flex;
+  flex-direction: column; 
+  align-items: center;   
+  gap: 20px;
+  background-color: hsl(0 0% 20%);
+
+  width: 150px;      
+  padding: 20px;   
+  border-radius: 1em;         
+  margin: 0 auto;
+
+  box-shadow: 0px 0px 5px 5px hsla(202, 0%, 9%, 1);
+
+  margin-top: 3em;
+}
+
+.addbtncon button {
+ font-size: 30px;
+ padding: 10px 42px;
 }
