--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,8 @@ p{
     text-align: center;
 }
 button{
-    background-color: hsl(202, 100%, 50%);
+
+    background: linear-gradient(to bottom right, hsl(202, 100%, 50%), hsl(202, 100%, 75%));
     border: none;
     font-size: 20px;
     padding: 18px 72px;
@@ -198,4 +199,49 @@ body {
 .addbtncon button {
  font-size: 30px;
  padding: 10px 42px;
+}
+
+
+
+
+
+
+/* ========== KALENDER GRID ========== */
+.calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr); /* 7 Spalten */
+  gap: 12px;
+  max-width: 800px;
+  margin: 2em auto;
+  background: hsl(0 0% 20%);
+  padding: 20px;
+  border-radius: 1em;
+  box-shadow: 0px 0px 5px 5px hsla(202, 0%, 9%, 1);
+}
+
+/* ================= KALENDER BUTTONS ================= */
+.day-btn {
+  padding: 20px;
+  border-radius: 12px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
+  font-family: 'Funnel Sans', sans-serif;
+  color: hsl(0, 0%, 98%);
+  background-color: hsl(202, 100%, 50%);
+  box-shadow: 0px 0px 5px 5px hsla(202, 100%, 50%, 0.1);
+
+  transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
+}
+
+.day-btn:hover {
+  transform: scale(1.05);
+  background-color: hsl(202, 100%, 40%);
+  box-shadow: 0px 0px 5px 5px hsla(202, 100%, 40%, 0.2);
+}
+
+.day-btn.active {
+  background-color: hsl(140, 80%, 40%); /* Grün */
+  box-shadow: 0px 0px 8px 5px hsla(140, 80%, 40%, 0.3);
 }
