--- a/liste.css
+++ b/liste.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   min-height: 100%;
   padding-top: env(safe-area-inset-top);
-
+  box-sizing: border-box;
   padding: 0 20px;
 }
 
@@ -37,7 +37,7 @@ p {
 
 .calendar {
   display: grid;
-  grid-template-columns: repeat(6, 1fr); 
+  grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
   gap: 12px;
   max-width: 800px;
   margin: 2em auto;
