--- a/liste.css
+++ b/liste.css
@@ -109,7 +109,7 @@ p {
   
   border-radius: 12px;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 800;
   cursor: pointer;
   border: none;
   font-family: 'Funnel Sans', sans-serif;
@@ -122,7 +122,7 @@ p {
   justify-content: end;
   align-items: center;  
   padding: 0 1em; 
-
+  line-height: 1.2;
   
 }
 
@@ -133,5 +133,5 @@ p {
 }
 
 .topbar a {
-  text-decoration: none; /* entfernt den Strich */
+  text-decoration: none;
 }
