--- a/styles.css
+++ b/styles.css
@@ -123,18 +123,31 @@ h1 {
     
 }
 
+.heading {
+  transition: all 0.4s ease;
+  text-shadow: 3px 3px 5px rgba(0,0,0,0.5);
+}
+
+.heading:hover {
+  transform: scale(1.05);
+
+}
+
 p{
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
     font-weight: 300;
     font-style: italic;
     text-align: center;
     margin-top: 0.2em;
-    color: hsl(0 0% 85%)
-  
+    color: hsl(0 0% 85%);
+    
 }
 
 .container {
     text-align: center;
-}
+
+} 
+
 button{
 
     background: linear-gradient(to bottom right, hsl(202, 100%, 50%), hsl(202, 100%, 75%));
@@ -142,7 +155,7 @@ button{
     font-size: 20px;
     padding: 18px 72px;
     border-radius: 40px;
-    
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     font-family: 'Funnel Sans', sans-serif;
     color: hsl(0, 0%, 98%);
     display: inline-block;
@@ -154,8 +167,7 @@ button{
 }
 
 button:hover {
-  background-color: hsl(202, 100%, 40%); 
-  box-shadow: 0px 0px 5px 5px hsla(202, 100%, 40%, 0.1); 
+ 
   transform: scale(1.05);
   transition: all 0.4s ease;
 }
@@ -200,7 +212,7 @@ body {
 
 .addbtncon button {
  font-size: 30px;
- padding: 10px 42px;
+ padding: 5px 42px;
 }
 
 
@@ -303,3 +315,90 @@ body {
 html, body {
   overflow-x: hidden; 
 }
+
+
+.popup {
+  display: none; /* unsichtbar */
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: rgba(0,0,0,0.6);
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.popup-content {
+  background: hsl(0 0% 15%);
+  padding: 20px;
+  border-radius: 15px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  
+}
+
+.popup-content input {
+  padding: 8px;
+  font-size: 16px;
+  border-radius: 8px;
+  border: 3px solid hsl(0, 0%, 30%);
+  background: hsl(0, 0%, 95%);
+  text-align: center;
+  font-family: 'Funnel Sans';
+  font-weight: 800;
+  color: hsl(0, 0%, 30%);
+  margin: auto;
+  transition: all 0.4s ease;
+}
+
+.popup-content h2 {
+  background: hsl(0, 0%, 20%);
+  padding: 10px 20px;
+  border-radius: 10px;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.8);
+  margin-top: 0;
+  margin-bottom: 5px;
+  transition: all 0.4s ease;
+}
+
+.closePopup {
+  border-radius: 12px;
+  font-size: 18px;
+  font-weight: 800;
+  cursor: pointer;
+  border: none;
+  font-family: 'Funnel Sans', sans-serif;
+  color: hsl(0, 0%, 98%);
+  background: hsl(340, 100%, 50%);
+  box-shadow: 0px 0px 5px 5px hsla(340, 100%, 50%, 0.1);
+  margin-top: 0.5em;
+  transition: transform 0.4s ease;
+  display: flex;
+  justify-content: end;
+  align-items: center;  
+  
+  line-height: 1;
+  text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  
+  
+}
+
+.popup-content h2:hover {
+  transform: scale(1.05);
+}
+
+.popup-content button {
+  padding: 10px 30px;
+  margin-top: 5px;
+}
+
+.popup-content input:hover {
+  transform: scale(1.05);
+}
+
