--- a/pageListe/liste.css
+++ b/pageListe/liste.css
@@ -1,6 +1,11 @@
+/* Main */
+
+html, body {
+  overflow-x: hidden; 
+}
 
 body {
-  background: hsl(0, 0%, 10%);
+  background: hsl(0, 0%, 3%);
   color: hsl(0 0% 98%);
   font-family: 'Funnel Sans', sans-serif;
   text-align: center;
@@ -19,16 +24,16 @@ h1 {
   display: inline-block;
   font-size: 44px;
   margin-bottom: 0.2em;
-  background: hsl(0 0% 20%);
+  background: hsl(0 0% 15%);
   padding: 0.1em 0.5em;
   border-radius: 15px;
   margin-top: auto;
-  box-shadow: 0px 0px 5px 5px hsl(0 0% 9%);
+  box-shadow: 0px 0px 5px 5px hsl(0 0% 8%);
 }
 
 .heading {
   transition: all 0.4s ease;
-  text-shadow: 3px 3px 5px rgba(0,0,0,0.5);
+  text-shadow: 3px 3px 5px rgba(0,0,0,0.8);
 }
 
 .heading:hover {
@@ -42,9 +47,10 @@ p {
   text-align: center;
   margin-top: 0.2em;
   color: hsl(0 0% 85%);
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+  text-shadow: 1px 1px 3px rgba(0,0,0,1);
 }
 
+/* Kalender */
 
 .calendar {
   display: grid;
@@ -52,10 +58,10 @@ p {
   gap: 12px;
   max-width: 800px;
   margin: 2em auto;
-  background: hsl(0 0% 20%);
+  background: hsl(0 0% 15%);
   padding: 20px;
   border-radius: 1em;
-  box-shadow: 0px 0px 5px 5px hsla(202, 0%, 9%, 1);
+  box-shadow: 0px 0px 5px 5px hsl(0 0% 8%);
   width: 100%;
   box-sizing: border-box;
   margin-bottom: auto;
@@ -73,7 +79,7 @@ p {
   color: hsl(0, 0%, 98%);
   background-color: hsl(202, 100%, 50%);
   box-shadow: 0px 0px 5px 5px hsla(202, 100%, 50%, 0.1);
-  text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+  text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
   transition: background-color 0.4s ease, 
               box-shadow 0.4s ease, 
               transform 0.4s ease;
@@ -89,22 +95,25 @@ p {
   box-shadow: 0px 0px 20px 5px hsla(143, 80%, 40%, 0.3);
 }
 
+/* Witze */
 
 #witz-container {
   margin: 2em auto;
   max-width: 600px;
-  background: hsl(0 0% 20%);
+  background: hsl(0 0% 15%);
   padding: 15px 20px;
   border-radius: 12px;
   color: hsl(0 0% 98%);
   font-style: italic;
   font-size: 18px;
   text-align: center;
-  box-shadow: 0px 0px 5px 3px hsla(0,0%,0%,0.3);
+  box-shadow: 0px 0px 5px 3px hsla(0,0%,8%,1);
   margin-top: 1em;
   text-align: start;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
 }
+
+/* Topbar (exit) */
 
 .topbar {
   display: flex;             
@@ -126,7 +135,7 @@ p {
   font-family: 'Funnel Sans', sans-serif;
   color: hsl(0, 0%, 98%);
   background-color: hsl(340, 100%, 50%);
-  box-shadow: 0px 0px 5px 5px hsla(340, 100%, 50%, 0.1);
+  box-shadow: 0px 0px 10px 5px hsla(340, 80%, 40%, 0.3);
   margin-top: 0.5em;
   transition: transform 0.4s ease;
   display: flex;
@@ -147,6 +156,5 @@ p {
   text-decoration: none;
 }
 
-html, body {
-  overflow-x: hidden; 
-}
+
+
