--- a/pageHome/styles.css
+++ b/pageHome/styles.css
@@ -119,7 +119,7 @@ h1 {
     padding: 0.1em 0.5em;
     border-radius: 15px;
     margin-top: 1.4em;
-    box-shadow: 0px 0px 5px 5px hsl(0 0% 8%)
+    box-shadow: 0px 0px 20px 5px hsl(0 0% 8%)
     
 }
 
@@ -159,7 +159,7 @@ button{
     font-family: 'Funnel Sans', sans-serif;
     color: hsl(0, 0%, 98%);
     display: inline-block;
-    box-shadow: 0px 0px 5px 5px hsla(202, 100%, 50%, 0.1);
+    box-shadow: 0px 0px 10px 5px hsla(202, 100%, 50%, 0.1);
     transition: background-color 0.3s ease;
     font-weight: 500;
     transition: all 0.4s ease;
@@ -211,7 +211,7 @@ body {
   border-radius: 1em;         
   margin: 0 auto;
 
-  box-shadow: 0px 0px 5px 5px hsla(202, 0%, 8%, 1);
+  box-shadow: 0px 0px 20px 5px hsla(202, 0%, 8%, 1);
 
   margin-top: 3em;
 }
@@ -242,7 +242,7 @@ body {
   border-radius: 1em;         
   margin: 0 auto;
 
-  box-shadow: 0px 0px 5px 5px hsla(202, 0%, 5%, 1);
+  box-shadow: 0px 0px 10px 5px hsla(202, 0%, 5%, 1);
   margin-top: 3em;
 }
 
@@ -250,11 +250,11 @@ body {
  font-size: 15px;
  padding: 7px 30px;
  background: linear-gradient(to bottom right, hsl(202, 100%, 40%), hsl(202, 100%, 50%));
- box-shadow: 0px 0px 5px 5px hsla(202, 100%, 50%, 0.1);
+ box-shadow: 0px 0px 10px 5px hsla(202, 100%, 50%, 0.1);
 }
 
 .fakebtn button:hover {
-  box-shadow: 0px 0px 5px 5px hsla(202, 100%, 40%, 0.1); 
+  box-shadow: 0px 0px 10px 5px hsla(202, 100%, 40%, 0.1); 
 }
 
 .fakebtn2 img {
@@ -276,7 +276,7 @@ body {
   border-radius: 1em;         
   margin: 0 auto;
 
-  box-shadow: 0px 0px 5px 5px hsla(202, 0%, 5%, 1);
+  box-shadow: 0px 0px 10px 5px hsla(202, 0%, 5%, 1);
 
   margin-top: 3em;
 }
@@ -285,11 +285,11 @@ body {
  font-size: 15px;
  padding: 7px 30px;
  background: linear-gradient(to bottom right, hsl(202, 100%, 40%), hsl(202, 100%, 50%));
- box-shadow: 0px 0px 5px 5px hsla(202, 100%, 50%, 0.1);
+ box-shadow: 0px 0px 10px 5px hsla(202, 100%, 50%, 0.1);
 }
 
 .fakebtn2 button:hover {
-  box-shadow: 0px 0px 5px 5px hsla(202, 100%, 40%, 0.1); 
+  box-shadow: 0px 0px 10px 5px hsla(202, 100%, 40%, 0.1); 
 }
 
 .container-row {
@@ -402,6 +402,7 @@ body {
   padding: 10px 30px;
   margin-bottom: 20px;
   background: linear-gradient(to bottom right, hsl(202, 100%, 50%), hsl(202, 100%, 70%));
+  font-weight: 600;
 }
 
 .popup-content input:hover {
