--- a/pageHome/styles.css
+++ b/pageHome/styles.css
@@ -200,12 +200,12 @@ body {
 
 .addbtncon {
   text-align: center;
-   display: flex;
+  display: flex;
   flex-direction: column; 
   align-items: center;   
   gap: 20px;
   background-color: hsl(0 0% 15%);
-
+  
   width: 150px;      
   padding: 20px;   
   border-radius: 1em;         
@@ -219,6 +219,7 @@ body {
 .addbtncon button {
  font-size: 30px;
  padding: 5px 42px;
+ font-weight: 600;
 }
 
 
@@ -251,6 +252,7 @@ body {
  padding: 7px 30px;
  background: linear-gradient(to bottom right, hsl(202, 100%, 40%), hsl(202, 100%, 50%));
  box-shadow: 0px 0px 10px 5px hsla(202, 100%, 50%, 0.1);
+ font-weight: 600;
 }
 
 .fakebtn button:hover {
@@ -286,6 +288,7 @@ body {
  padding: 7px 30px;
  background: linear-gradient(to bottom right, hsl(202, 100%, 40%), hsl(202, 100%, 50%));
  box-shadow: 0px 0px 10px 5px hsla(202, 100%, 50%, 0.1);
+ font-weight: 600;
 }
 
 .fakebtn2 button:hover {
@@ -407,4 +410,18 @@ body {
 
 .popup-content input:hover {
   transform: scale(1.05);
+}
+
+/* Versionsnummer */
+
+.versionsnummer {
+  font-size: 15px;
+  color: hsl(0 0% 50%);
+  text-align: center;
+  position: absolute;
+  display: flex;
+  margin: 0;
+  transform: translateX(-50%);
+  left: 50%; 
+  bottom: 20px;
 }
