--- a/pageListe/liste.css
+++ b/pageListe/liste.css
@@ -178,7 +178,7 @@ p {
   box-shadow: 0px 0px 20px 5px hsla(202, 0%, 0%, 0.5);
 }
 
-.secret-theme #witz-container, h1 {
+.secret-theme #witz-container {
   background-color: hsl(0, 0%, 5%);
 }
 
@@ -194,3 +194,6 @@ p {
   box-shadow: 0px 0px 20px 5px hsla(0, 0%, 0%, 0.8);
 }
 
+.secret-theme h1 {
+  background-color: hsl(0, 0%, 5%);
+}
