--- a/list/liste.css
+++ b/list/liste.css
@@ -197,3 +197,18 @@ p {
 .secret-theme h1 {
   background-color: hsl(0, 0%, 5%);
 }
+
+.day-btn.active {
+  background-color: hsla(50, 85%, 50%, 1.0);
+  box-shadow: 0 0 10px 3px hsla(50, 85%, 50%, 0.8);
+  animation: glow 1.5s infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    box-shadow: 0 0 10px 5px hsla(50, 85%, 50%, 0.2);
+  }
+  to {
+    box-shadow: 0 0 20px 5px hsla(50, 85%, 50%, 0.4);
+  }
+}
