--- a/pageHome/styles.css
+++ b/pageHome/styles.css
@@ -425,3 +425,21 @@ body {
   left: 50%; 
   bottom: 20px;
 }
+
+/* popup timer */
+
+.popup-content label {
+    background: hsl(0, 0%, 15%);
+  padding: 8px 20px;
+  border-radius: 10px;
+  text-shadow: 2px 2px 5px rgba(0,0,0,1);
+  margin-top: 0;
+  margin-bottom: 20px;
+  transition: all 0.4s ease;
+  margin-left: 15px; margin-right: 15px;
+  box-shadow: 0px 0px 3px 3px hsl(0 0% 9%)
+}
+
+.popup-content label:hover {
+  transform: scale(1.03);
+}
