--- a/pageHome/styles.css
+++ b/pageHome/styles.css
@@ -130,14 +130,10 @@ h1 {
 
 
 .heading {
-  transition: all 0.4s ease;
   text-shadow: 3px 3px 5px rgba(0,0,0,0.8);
 }
 
-.heading:hover {
-  transform: scale(1.05);
 
-}
 
 p{
   text-shadow: 1px 1px 3px rgba(0,0,0,1);
@@ -146,6 +142,7 @@ p{
   text-align: center;
   margin-top: 0.2em;
   color: hsl(0 0% 85%);
+  overflow: hidden;
 }
 
 .container {
@@ -725,45 +722,5 @@ h1 {
   to {
     opacity: 1;
     transform: translateY(0);
-  }
-}
-
-/* Heading Funkel */
-
-h1::before,
-h1::after {
-  animation: sparkle 2s infinite;
-}
-
-/* Zusätzliche funkelnde Partikel */
-.sparkle {
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  background: #f5f5f5;
-  border-radius: 50%;
-  box-shadow: 0 0 30px 30px #ffffff09;
-  animation: float 15s infinite;
-  pointer-events: none;
-}
-
-@keyframes float {
-  0%, 100% {
-    transform: translateY(100px) scale(0);
-    opacity: 0;
-  }
-
-  50% {
-    transform: translateY(-100px) scale(1);
-    opacity: 1;
-  }
-
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    transform: translateY(-200px) scale(0);
-    opacity: 0;
   }
 }
