--- a/list/liste.css
+++ b/list/liste.css
@@ -46,7 +46,6 @@ h1 {
 
 .heading:hover {
   transform: scale(1.05);
-
 }
 
 p {
@@ -178,7 +177,7 @@ p {
   margin-top: 1em;
   text-align: start;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.8);
-  margin-bottom: 1;
+  margin-bottom: 1em;
   background: linear-gradient(135deg, rgba(38, 38, 38, 1), rgba(38, 38, 38, 0.8));
   backdrop-filter: blur(5px);
   border-color: hsl(0, 0%, 18%);
