--- a/pageHome/styles.css
+++ b/pageHome/styles.css
@@ -126,14 +126,19 @@ h1 {
   border-color: hsl(0, 0%, 18%);
   border-style: solid;
   box-shadow: inset 0px 0px 15px 0px hsl(0 0% 5%);
+  z-index: 3;
 }
 
 
 .heading {
   text-shadow: 3px 3px 5px rgba(0,0,0,0.8);
+  transition: all 0.4s ease;
+  z-index: 3;
 }
 
-
+.heading:hover {
+  transform: scale(1.05);
+}
 
 p{
   text-shadow: 1px 1px 3px rgba(0,0,0,1);
@@ -376,20 +381,17 @@ body {
 }
 
 
-
-
 /* Popup Name */
-
 
 .popup {
   display: none; /* unsichtbar */
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background: rgba(0,0,0,0.4);
   justify-content: center;
   align-items: center;
- 
+  z-index: 3;
+  backdrop-filter: blur(3px);
 }
 
 .popup-content {
@@ -404,6 +406,7 @@ body {
   border-style: solid;
   box-shadow: inset 0px 0px 15px 0px hsl(0 0% 5%);
   margin: 0;
+  overflow: hidden;
 }
 
 .popup-content input {
@@ -431,7 +434,7 @@ body {
   margin-top: 0;
   margin-bottom: 20px;
   transition: all 0.4s ease;
-  margin-left: 15px; margin-right: 15px;
+  
   box-shadow: 0px 0px 3px 3px hsl(0 0% 9%);
   border-color: hsl(0, 0%, 20%);
   border-style: solid;
@@ -461,8 +464,12 @@ body {
   box-shadow: inset 0px 0px 10px 0px hsl(0 0% 5%);
 }
 
-.popup-content button {
+.popup .exit button {
   margin-top: 10px;
+}
+
+.popup-content .closePopup {
+  border-radius: 7px;
 }
 
 .closePopup {
@@ -483,8 +490,6 @@ body {
   padding: 1px 0.6em;
   margin-bottom: 12px;
 }
-
-
 
 
 .popup-content h2:hover {
@@ -569,17 +574,7 @@ body {
   transform: scale(1.03);
 }
 
-/* Haptic */
 
-        /* Verstecktes Element für iOS-Haptik */
-        #haptic-checkbox, #haptic-label {
-            position: absolute;
-            opacity: 0;
-            height: 0;
-            width: 0;
-            overflow: hidden;
-            pointer-events: none;
-        }
         /* Stil für Zeit-Eingabefelder */
         .time-inputs {
             display: flex;
@@ -601,6 +596,8 @@ body {
             width: 100%;
             box-sizing: border-box;
         }
+
+
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap");
 
