--- a/list/liste.css
+++ b/list/liste.css
@@ -103,38 +103,38 @@ p {
 }
 
 .day-btn.active {
-  background-color: hsl(143, 85%, 50%);
+  background-color: hsl(143, 85%, 50%); 
   box-shadow: 0px 0px 20px 5px hsla(143, 80%, 40%, 0.4);
   animation: glow 1.5s infinite alternate;
 }
 
 .calendar .day-btn.active:hover {
-  background-color: hsl(143, 85%, 60%);
+  background-color: hsl(150, 85%, 60%);
   box-shadow:
-    0 0 25px 8px hsla(143, 85%, 60%, 0.6),
-    0 0 50px 15px hsla(143, 85%, 60%, 0.3);
+    0 0 25px 8px hsla(150, 85%, 60%, 0.6),
+    0 0 50px 15px hsla(150, 85%, 60%, 0.3);
   transform: scale(1.08);
 }
 
 .day-btn.clicked {
-  background-color: hsl(143, 85%, 50%); /* Same green as active state */
-  box-shadow: 0px 0px 20px 5px hsla(143, 80%, 40%, 0.4);
+  background-color: hsl(150, 85%, 50%); /* Same green as active state */
+  box-shadow: 0px 0px 20px 5px hsla(150, 80%, 40%, 0.4);
 }
 
 .calendar .day-btn.clicked:hover {
-  background-color: hsl(143, 85%, 60%); /* Lighter green for hover */
+  background-color: hsl(150, 85%, 60%); /* Lighter green for hover */
   box-shadow:
-    0 0 25px hsla(143, 85%, 60%, 0.6),
-    0 0 50px hsla(143, 85%, 60%, 0.2);
+    0 0 25px hsla(150, 85%, 60%, 0.6),
+    0 0 50px hsla(150, 85%, 60%, 0.2);
   transform: scale(1.08);
 }
 
 @keyframes glow {
   from {
-    box-shadow: 0 0 10px 5px hsla(143, 85%, 50%, 0.2);
+    box-shadow: 0 0 10px 5px hsla(150, 85%, 50%, 0.2);
   }
   to {
-    box-shadow: 0 0 20px 5px hsla(143, 85%, 50%, 0.4);
+    box-shadow: 0 0 20px 5px hsla(150, 85%, 50%, 0.4);
   }
 }
 
@@ -192,36 +192,35 @@ p {
   display: flex;             
   justify-content: flex-end;  
   align-items: center;         
-  width: 100%;                 
-  padding: 0.5em 0.5em;
+  width: 100%;
   box-sizing: border-box;
   margin-bottom: 2em;
 }
 
 .topbar button {
   
-  border-radius: 12px;
+  border-radius: 50px;
   font-size: 18px;
   font-weight: 800;
   cursor: pointer;
-  border: none;
   font-family: 'Funnel Sans', sans-serif;
   color: hsl(0, 0%, 98%);
   background-color: hsl(340, 100%, 50%);
-  box-shadow: 0px 0px 10px 5px hsla(340, 80%, 40%, 0.3);
-  margin-top: 0.5em;
+  box-shadow: inset 0 0 3px hsla(340, 100%, 30%, 0.8), 0 0 20px hsla(340, 100%, 50%, 0.5);
+  margin-top: 20px;
   transition: transform 0.4s ease;
   display: flex;
   justify-content: end;
   align-items: center;  
-  padding: 5px 1em; 
+  padding: 0.1em 0.75em; 
   line-height: 1;
   text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
-  
+  border-color: hsl(340, 100%, 30%);
+  border-style: solid;
 }
 
 .topbar button:hover {
-      transform: scale(1.05);
+      transform: scale(1.08);
 
 }
 
