--- a/pageHome/styles.css
+++ b/pageHome/styles.css
@@ -210,7 +210,7 @@ body {
   align-items: center;   
   gap: 20px;
   background-color: hsl(0 0% 10%);
-  
+  z-index: 1;
   width: 150px;      
   padding: 30px;   
   border-radius: 1em;         
@@ -554,6 +554,7 @@ body {
   transform: translateX(-50%);
   left: 50%; 
   bottom: 20px;
+  z-index: 0;
 }
 
 /* popup timer */
