--- a/list/liste.css
+++ b/list/liste.css
@@ -207,7 +207,7 @@ p {
   color: hsl(0, 0%, 98%);
   background-color: hsl(340, 100%, 50%);
   box-shadow: inset 0 0 3px hsla(340, 100%, 30%, 0.8), 0 0 20px hsla(340, 100%, 50%, 0.5);
-  margin-top: 20px;
+  margin-top: 8px;
   transition: transform 0.4s ease;
   display: flex;
   justify-content: end;
@@ -246,7 +246,7 @@ p {
 }
 
 .secret-theme button {
-  background-color: hsl(0, 0%, 5%);
+  background-color: transparent;
   box-shadow: 0px 0px 20px 5px hsla(202, 0%, 0%, 0.5);
 }
 
@@ -256,6 +256,8 @@ p {
 
 .secret-theme .topbar button {
   box-shadow: 0px 0px 10px 3px hsla(0,0%,8%,0.5);
+  background-color: hsl(0, 0%, 15%);
+  border-color: hsl(0, 0%, 20%);
 }
 
 .secret-theme .day-btn.active {
@@ -314,6 +316,13 @@ p {
   background-color: hsl(0, 0%, 15%) !important; /* mittleres Grau */
   box-shadow: 0 0 20px 5px hsla(0, 0%, 20%, 0.8) !important;
   transform: scale(1.08);
+    background-color: hsl(0, 0%, 15%) !important; /* mittleres Grau */
+  box-shadow: 0 0 20px 5px hsla(0, 0%, 20%, 0.8) !important;
+  transform: scale(1.08);
+  background-image: url("../img/bomb.png") !important;
+  background-size: contain; /* oder cover, je nach gewünschtem Effekt */
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .secret-theme .aurora__item {
